# chemprop

./: .bumpversion.cfg  .dockerignore  .flake8  .gitignore  .readthedocs.yml  .travis.yml  AGENTS.md  CITATIONS.bib  CONTRIBUTING.md  DDP_train.py  Dockerfile  LICENSE  LICENSE.txt  MANIFEST.in  README.md  ablation.sh  avg_dups.py  baselines.sh  chembl_epoch.prof  cleaned.cxsmi  colab_demo.ipynb  create_random_splits.sh  create_splits.sh  cross_validate.py  data.py  end_to_end.py  environment.yml  eval.sh  example.py  example_nathan.py  exec.sh  exec_targets.sh  explore_cxsmiles_stereo.py  featurization.py  featurizer.npy  fingerprint.py  grid_search.py  hyper_opt.py  hyperopt.sh  hyperparameter_optimization.py  (+58 more)
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md  todo.md  v1_bug_report.md  v1_question.md  v2_bug_report.md  v2_feature_request.md  v2_question.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  new_feature.md
_docs/source/: args.rst  (+3 more)
chemprop/: __init__.py  _version.py  args.py  avg_dups.py  conf.py  constants.py  customunpickle.py  dio.py  end_to_end.py  exceptions.py  featurization.py  gan.py  hyper_opt.py  hyperopt_utils.py  hyperparameter_optimization.py  interpret.py  jtnn.py  loss_functions.py  main.py  metrics.py  model.py  moe.py  mpn.py  multitask_utils.py  nn_utils.py  nnutils.py  parsing.py  predict.py  random_forest.py  rdkit.py  rdkit_features.py  run.py  schedulers.py  sklearn_predict.py  sklearn_train.py  spectra_utils.py  train.py  types.py  utils.py
chemprop_orig/: constants.py  interpret.py  multitask_utils.py  spectra_utils.py  utils.py
conformal/: conformalscript.py  conformalscriptnumpy.py  delaneyTrain.py  python_testing.py  toxPred.py  toxPredSmiles.py  toxTrain.py
data/: bace.csv  bbbp.csv  delaney.csv  lipo.csv  pdbbind_core.csv  pdbbind_full.csv  pdbbind_refined.csv  sanitize.py  sider.csv  tox21.csv
deepchem-test/: README.md  mpn.py  nnclassify.py  nnregress.py  nnregress_qm.py  nnutils.py  run.sh  split_utils.py  splitutils.py  train.py  train_utils.py  utils.py
docs/: requirements.txt
examples/: active_learning.ipynb  atoms.ipynb  chemeleon_foundation_finetuning.ipynb  constrained_mol_atom_bond.ipynb  convert_v1_to_v2.ipynb  converted_model.ckpt  custom_loss_function.ipynb  extra_features_descriptors.ipynb  extra_features_from_featurizer.ipynb  hpopting.ipynb  hpopting_with_hyperopt.ipynb  interpreting_monte_carlo_tree_search.ipynb  interpreting_with_myerson_values.ipynb  loaded_atom_bond_features.ipynb  loaded_molecule_features.ipynb  mol_atom_bond.ipynb  mpnn_fingerprints.ipynb  multi_task.ipynb  polymer_testing2.ipynb  polymers.ipynb  polymers_full.ipynb  polymers_testing.ipynb  predict.ipynb  predicting.ipynb  predicting_regression_multicomponent.ipynb  predicting_regression_reaction.ipynb  predicting_regression_spectra.ipynb  rigr_featurizer.ipynb  run.sh  shap_v2.ipynb  shapley_value_with_customized_featurizers.ipynb  super_minimal.ipynb  training.ipynb  training_NLL.ipynb  training_NLogProbEnrichment.ipynb  training_classification.ipynb  training_regression_multicomponent.ipynb  training_regression_reaction.ipynb  training_regression_spectra.ipynb  transfer_learning.ipynb  (+3 more)
jtnn/: jtnn.py  jtnn_classify.py
notebooks/: rigr_flag_notebook.ipynb
requirements/: .gitignore  2.0.0_requirements.txt  2.0.0rc1_requirements.txt  2.0.1_requirements.txt  2.0.2_requirements.txt  2.0.3_requirements.txt  2.0.5_requirements.txt  2.1.0_requirements.txt  2.1.1_requirements.txt  2.1.2_requirements.txt  2.2.0_requirements.txt  2.2.1_requirements.txt  2.2.2_requirements.txt  2.2.3_requirements.txt  2.2.4_requirements.txt  README.md  get_requirements.sh
saved_splits/: test_atom_feat_0.npz  test_bond_feat_0.npz  test_descriptors.npz  train_atom_desc_0.npz  train_bond_feat_0.npz  train_descriptors.npz  val_atom_desc_0.npz  val_bond_feat_0.npz  val_descriptors.npz
scripts/: active_learning_wrapper.py  aggregate_results.py  aggregate_results_by_dataset.py  avg_dups.py  check_hyperopt.py  class_balance.py  create_crossval_index_files.py  create_crossval_splits.py  examine_split_balance.py  filter_by_scaffold.py  find_similar_mols.py  lsc_to_our_format.py  overlap.py  plot_distribution.py  qsub_gen.py  qsub_retrain_gen.py  regress.py  resplit_data.py  retrain_test_regress.py  run.sh  sanitize.py  save_features.py  similarity.py  split_data.py  train_classify.py  train_regress.py  train_test_regress.py  tsne.py  visualize_encoding_property_space.py  viz_attention.py  vocab.py  vocab.sh  welchs.py  wilcoxon_significance.py
templates/: checkpoints.html  data.html  home.html  layout.html  macros.html  predict.html  train.html
test/: config.json  delaney_toy.csv  delaney_toy_features.npz  delaney_toy_features.pkl  delaney_toy_folds.pkl  delaney_toy_smiles.csv  delaney_toy_smiles_names.csv  test.py  tox21_toy.csv
test_plan/: data_generation_multiclass.py  data_generation_multilabel.py  data_generation_regression.py  run_scripts.py  test_predict_multiclass.py  test_predict_multiclass_adaptive.py  test_predict_multilabel.py  test_predict_quantile_regression.py  test_predict_quantile_regression_multi_smile_example.py  test_predict_regression.py  test_train_multiclass.py  test_train_multilabel.py  test_train_quantile_regression.py  test_train_quantile_regression_multi_smile_example.py  test_train_quantile_regression_multismile_example.py  test_train_regression.py  test_validate_multiclass.py  test_validate_multiclass_adaptive.py  test_validate_multilabel.py  test_validate_quantile_regression.py  test_validate_regression.py
tests/: conftest.py  regenerate_models.sh  test_features.py  test_featurization.py  test_int_features_generators.py  test_integration.py  test_multitask_mean.py  test_unit.py  test_utils.py  tests_integration.py  unit_tests.py
vocab/: HIV.vocab  bace.vocab  clintox.vocab  freesolv.vocab  lipo.vocab  pcba.vocab  qm8.vocab  qm9.vocab  sider.vocab
web/: __init__.py  config.py  db.py  run.py  schema.sql  web.py  wsgi.py
(+1117 files in other folders)
