[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "chemprop"
description = "Molecular Property Prediction with Message Passing Neural Networks"
version = "2.0.0a1"
authors = [
    {name = "David Graff"},
    {name = "Kevin Greenman"},
    {name = "Oschar Wu"},
    {name = "Kyle Swanson"},
    {name = "Kevin Yang"},
    {name = "Wengong Jin"},
    {name = "Lior Hirschfeld"},
    {name = "Allison Tam"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords = [
    "chemistry",
    "machine learning",
    "property prediction",
    "message passing neural network",
    "graph neural network"
]
requires-python = ">=3.11"
dependencies = [
    "lightning >= 2.0",
    "numpy",
    "pandas",
    "rdkit",
    "scikit-learn",
    "scipy",
    "torch >= 2.1",
    "astartes[molecules]",
]

[project.optional-dependencies]
dev = ["black", "bumpversion", "flake8", "pytest", "pytest-cov"]
docs = ["sphinx", "sphinx-autobuild", "sphinx-autoapi", "sphinxcontrib-bibtex", "sphinx-book-theme"]
test = ["parameterized > 0.8", "pytest >= 6.2", "pytest-cov"]

[project.urls]
documentation = "https://chemprop.readthedocs.io/en/latest/"
source = "https://github.com/chemprop/chemprop"
PyPi = "https://pypi.org/project/chemprop/"
demo = "http://chemprop.csail.mit.edu/"

[project.scripts]
chemprop = "chemprop.v2.cli.main:main"

[tool.black]
line-length = 100
target-version = ["py311"]
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
addopts = "--cov chemprop"
