[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "chemprop"
description = "Molecular Property Prediction with Message Passing Neural Networks"
version = "2.0.0b1"
authors = [
    {name = "The Chemprop Development Team (see LICENSE.txt)", email="chemprop@mit.edu"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords = [
    "chemistry",
    "machine learning",
    "property prediction",
    "message passing neural network",
    "graph neural network",
    "drug discovery"
]
requires-python = ">=3.11"
dependencies = [
    "lightning >= 2.0",
    "numpy",
    "pandas",
    "rdkit",
    "scikit-learn",
    "scipy",
    "torch >= 2.1",
    "torch_scatter",
    "astartes[molecules]",
]

[project.optional-dependencies]
dev = ["black", "bumpversion", "flake8", "pytest", "pytest-cov"]
docs = ["sphinx", "sphinx-autobuild", "sphinx-autoapi", "sphinxcontrib-bibtex", "sphinx-book-theme"]
test = ["parameterized > 0.8", "pytest >= 6.2", "pytest-cov"]

[project.urls]
documentation = "https://chemprop.readthedocs.io/en/latest/"
source = "https://github.com/chemprop/chemprop"
PyPi = "https://pypi.org/project/chemprop/"

[project.scripts]
chemprop = "chemprop.cli.main:main"

[tool.setuptools]
packages = ["chemprop"]

[tool.black]
line-length = 100
target-version = ["py311"]
skip-magic-trailing-comma = true

[tool.autopep8]
select = ["E262", "W293"]
in_place = true
recursive = true
aggressive = 2
max_line_length = 100


[tool.pytest.ini_options]
addopts = "--cov chemprop"
