[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "chemprop"
description = "Molecular Property Prediction with Message Passing Neural Networks"
version = "2.0.4"
authors = [
    {name = "The Chemprop Development Team (see LICENSE.txt)", email="chemprop@mit.edu"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords = [
    "chemistry",
    "machine learning",
    "property prediction",
    "message passing neural network",
    "graph neural network",
    "drug discovery"
]
requires-python = ">=3.11"
dependencies = [
    "lightning >= 2.0",
    "numpy < 2.0.0",
    "pandas",
    "rdkit",
    "scikit-learn",
    "scipy",
    "torch >= 2.1",
    "astartes[molecules]",
    "ConfigArgParse",
]

[project.optional-dependencies]
hpopt = ["ray[tune]", "hyperopt", "optuna"]
dev = ["black == 23.*", "bumpversion", "autopep8", "flake8", "pytest", "pytest-cov", "isort"]
docs = ["nbsphinx", "sphinx", "sphinx-argparse != 0.5.0", "sphinx-autobuild", "sphinx-autoapi", "sphinxcontrib-bibtex", "sphinx-book-theme", "nbsphinx-link", "ipykernel", "docutils < 0.21", "readthedocs-sphinx-ext", "pandoc"]
test = ["pytest >= 6.2", "pytest-cov"]
notebooks = ["ipykernel"]

[project.urls]
documentation = "https://chemprop.readthedocs.io/en/latest/"
source = "https://github.com/chemprop/chemprop"
PyPi = "https://pypi.org/project/chemprop/"

[project.scripts]
chemprop = "chemprop.cli.main:main"

[tool.black]
line-length = 100
target-version = ["py311"]
skip-magic-trailing-comma = true
required-version = "23"

[tool.autopep8]
in_place = true
recursive = true
aggressive = 2
max_line_length = 100


[tool.pytest.ini_options]
addopts = "--cov chemprop"

[tool.isort]
profile = "black"
line_length = 100
force_sort_within_sections = true
