[metadata]
name = chemprop
version = 1.5.1
description = Molecular Property Prediction with Message Passing Neural Networks
author = David Graff, Kevin Greenman, Oschar Wu, Kyle Swanson, Kevin Yang, Wengong Jin, Lior Hirschfeld, Allison Tam
maintainer = David Graff, Kevin Greenman, Oschar Wu
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
author_email = chemprop@mit.edu
maintainer_email = chemprop@mit.edu
url = https://github.com/chemprop/chemprop
project_urls =
	Documentation = https://chemprop.readthedocs.io/en/latest/
	Source = https://github.com/chemprop/chemprop
	PyPi = https://pypi.org/project/chemprop/
	Demo = http://chemprop.csail.mit.edu/
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
keywords =
	chemistry
	machine learning
	property prediction
	message passing neural network
	graph neural networtk

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
	numpy
	pandas
	rdkit
	scikit-learn
	scipy
	pytorch-lightning >= 1.7
	torch >= 1.11

[options.package_data]
chemprop =
	py.typed

[options.entry_points]
console_scripts = 
	chemprop_train = chemprop.train:chemprop_train
	chemprop_predict = chemprop.train:chemprop_predict
	chemprop_fingerprint = chemprop.train:chemprop_fingerprint
	chemprop_hyperopt = chemprop.hyperparameter_optimization:chemprop_hyperopt
	chemprop_interpret = chemprop.interpret:chemprop_interpret
	sklearn_train = chemprop.sklearn_train:sklearn_train
	sklearn_predict = chemprop.sklearn_predict:sklearn_predict

[options.extras_require]
doc =
	sphinx >= 1.5
dev =
	black
	bumpversion
	flake8
	pytest
	pytest-cov
test =
	parameterized > 0.8
	pytest >= 6.2
	pytest-cov
